--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
   <div class="container mt-5">
-    <h1>Cheesenese Dictionary</h1>
+    <h1 class="mb-4">Cheesenese ⇆ English Dictionary</h1>
     <table id="data-table" class="table table-bordered">
       <thead>
         <tr>
-          <th>Cheese</th>
+          <th>Cheesenese</th>
           <th>English</th>
         </tr>
       </thead>
