--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
 <body>
   <div class="container mt-5">
-    <h1 class="mb-4">Cheesenese ⇆ English Dictionary</h1>
-    <table id="data-table" class="table table-bordered">
-      <thead>
-        <tr>
-          <th>Cheesenese</th>
-          <th>English</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <h1>Cheesenese ⇆ English Dictionary</h1>
+    <span=>An official Goddardish website</span>
+      <table id="data-table" class="table table-bordered mt-5">
+        <thead>
+          <tr>
+            <th>Cheesenese</th>
+            <th>English</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
   </div>
   <script src="script.js"></script>
 </body>
